--- a/public/template/winery_photo_list.html
+++ b/public/template/winery_photo_list.html
@@ -109,8 +109,21 @@
                             <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_4.jpg" width="130" height="87" alt="blablabla" /></a>
                                 <a class="icon_comment">2</a>
                     </li>
+                    <div class="clear"></div>
+                    <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="87" alt="blablabla" /></a>
+                                <a class="icon_comment">2</a>
+                        </li>
+                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_2.jpg" width="130" height="130" alt="blablabla" /></a>
+                                <a class="icon_comment">2</a>
+                      </li>
+                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_3.jpg" width="130" height="87" alt="blablabla" /></a>
+                                <a class="icon_comment">2</a>
+                      </li>
+                            <li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_4.jpg" width="130" height="87" alt="blablabla" /></a>
+                                <a class="icon_comment">2</a>
+                    </li>
                       </ul>
-                        <ul class="winery_pic_list">
+<!--                        <ul class="winery_pic_list">
                         	<li> <a href="winery_photo_detail.html"><img src="images/test/winery_pic_130_1.jpg" width="130" height="87" alt="blablabla" /></a>
                                 <a class="icon_comment">2</a>
                             </li>
@@ -124,7 +137,7 @@
                                 <a class="icon_comment">2</a>
                             </li>
                         </ul>
-                        <div class="clear"></div>
+-->                        <div class="clear"></div>
                     </div>
               </div>
                 <div class="pagination">
