--- a/public/template/stylesheets/main.css
+++ b/public/template/stylesheets/main.css
@@ -109,6 +109,7 @@ a.icon_delet {background-position:0 -56px;height:13px;width:13px;}
 a.icon_edit {background-position:0 -74px;height:13px;width:13px;}
 a.icon_add {background-position:0 -92px; height:14px;width:14px;}
 a.icon_delet2 {background-position:0 -115px;height:13px;width:13px;}
+.follower a.icon_delet2 {position:absolute;left:160px;top:3px;}
 a.icon_cellar {background-position:0 -190px;height:10px;width:10px;}
 .icon_fb, .icon_tt, .icon_sina, .icon_fb_off, .icon_tt_off, .icon_sina_off {background:url(../images/icon/sns_link.gif) no-repeat ;display:block;float:left;height:23px;width:23px; text-indent:-9999px;}
 .icon_fb {background-position: 0 0;}
@@ -164,9 +165,10 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 /*common style*/
 .comment_list {margin: 0 0 20px 0;}
 .comment_list li {margin: 0 0 10px 0;padding: 0 0 10px 0;width:590px;float:left;}
-.comment_list .userpic, .comment_post .userpic {float:left;margin:0 20px 0 0;}
-.comment_list .username {margin:0 0 3px 0;}
-.comment_list .username span {display:inline-block;margin-left:10px;}
+.comment_list .userpic, .comment_post .userpic, .comment_list .winepic {float:left;margin:0 20px 0 0;}
+.comment_list .username, .comment_list .winename {margin:0 0 3px 0;}
+.comment_list .username span, .comment_list .winename span{display:inline-block;margin-left:10px;}
+.comment_list .pic {float:left;width:70px;margin-right:20px;}
 .comment_list .main {float:left;width:520px;}
 .comment_list .reply {padding:3px 5px;margin:0 0 10px 15px;border-left:1px solid #ccc;color:#999;}
 .comment_list .replybox {margin:10px 0;}
@@ -189,7 +191,7 @@ a.icon_comment {background-position:0 -143px;padding-left:15px;}
 .userlist .userpic {width:50px;float:left;margin-right:15px;}
 .userlist .userinfo {width:105px;float:left;}
 .userlist .userinfo .userlocation {color:#999;}
-
+.follower li {position:relative;}
 
 /*---------table style-----------*/
 .data_style1 td {background-color:#f3f3f3;border-right:2px solid #fff;border-bottom:2px solid #fff;padding:2px 10px;}
@@ -264,6 +266,13 @@ ul.private_list li {padding:15px 10px;border-bottom:1px solid #ccc;}
 .message_talk .content { float:left;display:inline-block;width:460px;}
 .talk_l .content {background-color:#f3f3f3;padding:10px;}
 .talk_r .content {background-color:#f9f9f9;padding:10px;}
+.winery_list li {margin: 0 0 40px 0;width:590px;float:left;}
+.winery_list .logo {width:100px;float:left;margin-right:20px;}
+.winery_list .meta {width:470px;float:left;}
+.sidebar .title {margin-bottom:20px;font-size:13px;font-weight:bold;}
+.sidebar .username {margin-bottom:5px;}
+.sidebar .userlist li {margin:0 0 20px 0;}
+.sidebar .location {color:#999;margin-left:10px;display:inline-block;}
 
 
 /*button style*/
