--- a/public/template/myhp_comment_list.html
+++ b/public/template/myhp_comment_list.html
@@ -40,14 +40,14 @@
                 <div class="item"><a class="icon_mail" href="#">私信</a> | <a href="#">设置</a></div>
                 <ul class="hp_navi">
                     <li><a href="cellar.html">12<br/>藏酒</a></li>
-                    <li><a href="hp_wine_following.html">12<br/>
+                    <li><a href="myhp_wine_list.html">12<br/>
                     关注的酒</a></li>
-                    <li><a href="hp_winery_following.html">12<br/>
+                    <li><a href="myhp_winery_list.html">12<br/>
                     关注的酒庄</a></li>
-                    <li class="current"><a href="hp_comment_list.html">12<br/>评论</a></li>
-                    <li><a href="hp_testing_list.html">12<br/>品酒辞</a></li>
-                    <li><a href="hp_people_following.html">12<br/>关注的人</a></li>
-                    <li><a href="hp_people_follower.html">12<br/>粉丝</a></li>
+                    <li class="current"><a href="myhp_comment_list.html">12<br/>评论</a></li>
+                    <li><a href="#">12<br/>品酒辞</a></li>
+                    <li><a href="myhp_following_list.html">12<br/>关注的人</a></li>
+                    <li><a href="myhp_follower_list.html">12<br/>粉丝</a></li>
                     <li><a href="album.html">12<br/>相册</a></li>
                 </ul>
                 <div class="clear"></div>
