--- a/app/views/themes/waterfall/wineries/show.html.erb
+++ b/app/views/themes/waterfall/wineries/show.html.erb
@@ -45,7 +45,7 @@
 
     <div class="right">
       <div class="sidebox">
-        <div class="title"><h3>热门酒款</h3></div>
+        <div class="title"><h3><a name="05" id="05"></a>热门酒款</h3></div>
         <div class="main">
           <ul class="sidewine">
             <%= render :partial => "hot_wine", :collection => @hot_wines, :as => :wine_detail %>
