--- a/app/views/themes/waterfall/wine_details/share/_followers_list.erb
+++ b/app/views/themes/waterfall/wine_details/share/_followers_list.erb
@@ -1,10 +1,20 @@
-<!-- 如果是相互关注 -->
-<% @followers.each do |user| %>
-  <div class="item">
-    <div class="pic">
-      <%= link_to_user user, user_path(user, :trailing_slash => true), :with_avatar => true, :avatar_version => :middle %>
-    </div>
-    <h4> <%= user.username %> </h4>
-    <p> <%#= user.profile.get_living_city %></p>
-  </div>
-<% end %>
+<ul class="userlist">
+	<% @followers.each_with_index do |user, index| %>
+	<li>
+		<div class="userpic">
+			<%= link_to_user user, user_path(user, :trailing_slash => true), :with_avatar => true, :avatar_version => :middle %>
+		</div>
+		<div class="userinfo">
+			<div class="username">
+					<%= link_to_user user, user_path(user, :trailing_slash => true) %>
+			</div>
+			<div class="userlocation">上海</div>
+		</div>
+	</li>
+	<% if ((index + 1) % 3) == 0 %>
+	<div class="clear"></div>
+	<% end %>
+	
+	<% end %>
+	<div class="clear"></div>
+</ul>
