--- a/app/views/themes/waterfall/wine_details/comments/index.html.erb
+++ b/app/views/themes/waterfall/wine_details/comments/index.html.erb
@@ -1,227 +1,94 @@
-<div id="comment_form"  style="display: none" >
+<% content_for :css do %>
+	<%= theme_stylesheet_link_tag :wine, :thumb %>
+	<% end %>
+	<div id="wp_left">
+		<%= render_stickies %>
+		<div class="wp_space_line top">
+			<%= link_to wine_path(@wine_detail), :class => [:btn_gray, :float_r] do %>
+			<span>返回</span>
+			<% end %>
 
-</div>
+			<a href="#comment_body" class="btn_gray float_r mr5 add_comment"><span>添加评论</span></a>
+			<h1 class="wine_name_ch"><%= raw @wine_detail.cname %>的评论</h1>
+			<div class="clear"></div>
+		</div>
+		<div class="wp_space_line ptb30">
+			<div class="sort">
+				<% if params[:sort_by] == "hot" %>
+				<span class="current">热门评论</span>
+				<span><%= link_to "最新评论", wine_comments_path(@wine_detail.id, :sort_by => "new"), :class => 'new' %></span>
+				<% elsif  params[:sort_by] == "new" %>
+				<span><%= link_to "热门评论", wine_comments_path(@wine_detail.id, :sort_by => "hot"), :class => 'hot' %></span>
+				<span class="current">最新评论</span>
+				<% else %>
+				<span class="current">热门评论</span>
+				<span><%= link_to "最新评论", wine_comments_path(@wine_detail.id, :sort_by => "new"), :class => 'new' %></span>
+				<% end %>
+				<div class="clear"></div>
+			</div>
 
-<div id="add_to_cellar_form"  style="display: none" >
+			<%= render "wine_details/share/comments" %>
 
-</div>
-
-<div class="wine_profile">
-  <%= render_stickies %>
-  <div class="left">
-    <div class="box title relative">
-          <h2>
-               <%= raw @wine_detail.cname %>
-               (<%= @wine_detail.comments_count  %>)
-          </h2>
-     <!-- title end -->
-     <%= link_to_button "add_comment", "#comment_body" %>
-     <%= link_to_button "back", wine_path(@wine_detail) %>
-    </div>
-    <div class="clear"></div>
-    <div class="box sort">
-      <ul>
-        <li><%= link_to "热门评论", wine_comments_path(@wine_detail.id, :sort_by => "hot"), :class => 'hot' %></li>
-        <li><%= link_to "最新评论", wine_comments_path(@wine_detail.id, :sort_by => "new"), :class => 'new' %></li>
-    </div>
-    <div class="box comments">
-      <%= render "wine_details/share/comments" %>
-    </div>
-    <div class="clear"></div>
-
-    <div class="pagination">
-      <%= paginate @comments %>
-    </div>
-    <div class="clear"> </div>
-    <% if user_signed_in? %>
-      <div class="box form "  id="wine_profile_star_bar">
-        <div class="top"></div>
-        <div class="middle">
-          <%= form_for @comment, :url => wine_comments_path(@wine_detail.id), :method => :post do |f| -%>
-          <%= hidden_field_tag "wine_detail_id", @wine_detail.id %>
-          <%= hidden_field_tag "comment[do]", "comment" %>
-          <%= hidden_field_tag "return_url", request.fullpath %>
-          <table border="0" cellspacing="5" cellpadding="5">
-            <tr>
-              <td valign="top" class="td_1">
-                <%= link_to_user current_user,
-                    users_path(current_user),
-                    :with_avatar => true,
-                    :avatar_version => :middle %>
-            </td>
-            <td class="td_2"><%= f.text_area :body %></td>
-            <td valign="top" class="td_3">
-              想给个评价?
-              <ul id="stars">
-
-              </ul>
-              <input type="hidden" name="rate_value" value=<%= @comment.point || 0 %> />
-              <div class="clear"></div>
-              <span class="text_value"></span>
-              <div class="clear"></div>
-              <%= image_submit_tag "v2/button/send_comment.png" %>
-            </td>
-          </tr>
-        </table>
-
-      <% end %>
-      </div>
-      <div class="bottom"></div>
-  </div>
-    <% end %>
-    <!-- left end -->
-  </div>
-
-  <div  class="right">
-    <div class="box resource">
-      <%= render "wine_details/share/resource" %>
-    </div>
-    <div class="clear"></div>
-
-    <div class="box spec">
-      <%= render "wine_details/share/spec" %>
-    </div>
-    <div class="clear"></div>
-
-    <div class="box score">
-      <%= render "wine_details/share/score" %>
-    </div>
-    <div class="clear"></div>
-
-    <div class="box special_comments">
-      <%= render "wine_details/share/special_comments" %>
-    </div>
-    <div class="clear"></div>
-
-    <div class="box price">
-      <%= render "wine_details/share/price" %>
-    </div>
-    <div class="clear"></div>
-
-    <div class="box vintage">
-      <%= render "wine_details/share/vintage" %>
-    </div>
-    <div class="clear"></div>
-
-    <%= link_to_button "feedback", "/" %>
-    <!-- right end -->
-    </div>
+			<div class="clear"></div>
+			<div class="pagination">
+				<%= paginate @comments %>
+			</div>
 
 
-  <!-- wine_profile end -->
- </div>
+			<div class="comment_post mt30">
+				<% if user_signed_in? %>
+				<%= form_for @comment, :validate => true do |f| -%>
+				<%= f.hidden_field :do %>
+				<%= hidden_field_tag "return_url", request.fullpath %>
+				<a name="01" id="01"></a>
+				<div class="userpic">
+					<%= link_to_user @user,
+					users_path(@user),
+					:with_avatar => true,
+					:avatar_version => :middle %>      
+				</div>
+				<div class="post_main">
+					<div class="post">
+						<%= f.text_area :body,  :class => [:mb10, :comment_body] %>
+						<div>
+							<a href="javascript:void(0)" class="btn_gray submit"><span>加上去</span></a>
+						</div>
+					</div>
+				</div>
+				<div class="clear"></div>
+				<% end %>
 
-<div class="clear"></div>
+				<% else %>
+				<p><%= link_to "登陆发表评论", login_path() %></p>
+				<% end %>
+			</div>
 
-
-<script type="text/template" id="star_item">
-  <%= image_tag 'base/star_gray.jpg', :width => 15, :height => 14 %>
- </script>
-
-<script type="text/javascript">
-  $(function(){
-
-    window.StarsView = Backbone.View.extend({
-        initialize: function() {
-            self = this
-            _.each([1, 2, 3, 4, 5], function(num){
-                self.addOne(num);
-            });
-            return this;
-        },
-        addOne: function(num) {
-            var view = new StarItemView(num);
-            $("ul#stars").append(view.render(num).el);
-        },
-        setDefaultRateStar: function(){
-            var default_num = this.itemView.input.val();
-            var items = $(this.el).find("ul#stars").children().slice(0, default_num);
-            _.each(items, function(item){
-                $(item).find("img").attr("src", "/assets/base/star_red.jpg");
-            });
-
-        }
-    });
-
-    window.StarItemView = Backbone.View.extend({
-        input: $("input[name='rate_value']"),
-        tagName: 'li',
-        template: _.template($('#star_item').html()),
-        textValue: ['欠佳',   '可接受','出色','非常不错','质量一流'],
-        events: {
-            "mouseover .star img"  : "changeStarColorAsYellow",
-            'mouseleave .star img': 'initializeRateValue',
-            "click .star img"  : "setStarRate"
-
-        },
-        initialize: function() {
-        },
-
-        render: function(num) {
-            $(this.el).attr("id", "star_" + num).addClass("star").html(this.template());
-            this.setText();
-            return this;
-        },
-        setStarRate: function() {
-            var num = $(this.el).attr("id").split("_")[1];
-            this.setInputValue(num);
-            this.showColorStar(nub, "red");
-        },
-        // mouseover 鼠标滑进时
-        changeStarColorAsYellow: function() {
-            this.showColorStar(5, "gray");
-            // 设星
-            var num = $(this.el).attr("id").split("_")[1];
-            this.showColorStar(num, "yellow");
-            // 设文
-            this.setText(num);
-        },
-        setInputValue: function(value){
-            this.input.val(value);
-        },
-        // 鼠标离开星星时，默认显示原来的值
-        initializeRateValue: function() {
-            var num = 5;
-            this.showColorStar(num, "gray");
-            var num = this.input.val();
-            this.showColorStar(num, "red");
-            this.setText(num);
-        },
-        starSrc: function(color){
-            return "/assets/base/star_" + color +".jpg";
-        },
-        // end: 为显示几个星星
-        // color: 显示什么颜色
-        showColorStar: function(end, color){
-            var self = this;
-            var items = $(this.el).parent().children().slice(0, end);
-            _.each(items, function(item){
-                $(item).find("img").attr("src", self.starSrc(color));
-            });
-        },
-        remove: function() {
-            $(this.el).remove();
-        },
-        clear: function() {
-            // this.model.destroy();
-        },
-        setText: function(num) {
-            $(".text_value").text(this.textValue[num]);
-        }
-    });
-
-    window.StarApp = new StarsView({el:$("#wine_profile_star_bar")});
-    StarApp.itemView = new StarItemView();
-    StarApp.setDefaultRateStar();
-
-   $(".button.add_comment").click(function(e){
-     e.preventDefault();
-     var st=$(document).scrollTop();
-     $(document).scrollTop(st);
-     $("#comment_body").focus();
-  });
-
-});
+		</div>
+	</div>
 
 
-</script>
+	<div id="wp_right">
+		<%= render "wine_details/share/resource" %>
+		<%= render "wine_details/share/spec"%>
+		<%= render "wine_details/share/score"%>
+		<%= render "wine_details/share/special_comments"%>
+		<%= render "wine_details/share/price"%>
+		<%= render "wine_details/share/vintage"%>
+		<div class=""><a href="#" class="btn_gray"><span>信息纠错与补充</span></a></div>
+	</div>
+	<div class="clear"></div>   
+
+
+	<script type="text/javascript" charset="utf-8">						
+	$(document).ready(function(){
+		
+		$(".add_comment").click(function(e){
+			e.preventDefault();
+			var st=$(document).scrollTop();
+			$(document).scrollTop(st);
+			$(".comment_body").focus();
+		});
+
+	});
+	</script>
+
