--- a/app/views/themes/waterfall/wine_details/share/_comments.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_comments.html.erb
@@ -1,4 +1,4 @@
-<div class="wp_space_line ptb30">
+	<% if params[:controller] == "wine_details" &&  params[:action] == "show" %>
 	<div class="title_btn">
 		<a href="#" class="btn_gray float_r"><span>添加评论</span></a>
 		<% unless params[:controller] == "wine_details/comments" %>
@@ -11,6 +11,8 @@
 		<% end %>
 		<div class="clear"></div>
 	</div>
+	<% end %>
+	
 	<ul class="comment_list clearfix">
 
 		<% @comments.each do |comment| %>	
@@ -26,7 +28,7 @@
 				</div>
 				<div class="content"><%= comment.body %></div>
 				<div class="userful">
-					<%= link_to  vote_comment_path(comment.id), :remote => true, :class => "ajax"  do %>
+					<%= link_to  vote_comment_path(comment.id), :remote => true, :class => "ajax vote"  do %>
 		        有用(<span class="likes_count"><%=comment.votes_count %></span>)
 		      <% end %>
 					| 
@@ -49,14 +51,14 @@
 		<% end %>
 		</ul>
 		<div class="clear"></div>
-	</div>
+	
 	
 
 
 <script type="text/javascript">
   $(document).ready(function(){
   // "有用" 成功时，更新有用的数量
-  $(".vote a").bind("ajax:success", function(event, data, textStatus, jqXHR){
+  $("a.vote").bind("ajax:success", function(event, data, textStatus, jqXHR){
     $(this).find("span.likes_count").text(data);
   });
   // 评论按钮
