--- a/app/views/themes/waterfall/wine_details/share/_owners.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_owners.html.erb
@@ -1,10 +1,12 @@
 <div class="wp_space_line ptb30">
+	<% if params[:controller] == "wine_details" &&  params[:action] == "show" %>	
 	<div class="title_btn">
 		<h2>他们拥有，或许也愿意出售<span class="font12 more">
 			<%= link_to "（共#{@wine_detail.owners_count}人...)", owners_wine_path(@wine_detail.id) %>
 			</span>
 		</h2>
 	</div>
+	<% end %>
 	<ul class="wp_owner">
 		<% @owners.each do |cellar_item| %>
 		<li>
@@ -17,6 +19,7 @@
 			<div class="info">
 				<p class="username"><%= link_to_user cellar_item.user,  user_path(cellar_item.user, :trailing_slash => true ) %></p>
 				<p><%= cellar_item.number %>支 | <span class="price"> ¥<%= cellar_item.price %></span>/支</p>
+				<%= link_to "去他的酒窖", user_cellar_path(cellar_item.user, cellar_item.user.cellar), :class => [:icon_cellar], :title => "去他的酒窖"%>
 			</div>
 		</li>
 		<% end %>
