--- a/app/views/themes/waterfall/wine_details/share/_price.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_price.html.erb
@@ -1,1 +1,3 @@
-<p><strong>价格：</strong>¥2580 起（更多价格信息+）</p>
+<div class="wp_price">
+	价格：<span class="price_b">￥2580</span> 起 <a href="#">(更多价格信息+)</a>
+</div>
