--- a/app/views/themes/waterfall/wine_details/share/_special_comments.html.erb
+++ b/app/views/themes/waterfall/wine_details/share/_special_comments.html.erb
@@ -1,22 +1,24 @@
-<!-- <table border="0" cellspacing="" cellpadding="3">
-  <tr>
-    <th>评论家</th>
-    <th>得分           </th>
-    <th>适饮年限</th>
-  </tr>
-  <tr>
-    <td>Jancis Robinson</td>
-    <td>18/20</td>
-    <td>2014-2024</td>
-  </tr>
-  <tr>
-    <td>Jancis Robinson</td>
-    <td>18/20</td>
-    <td>2014-2024</td>
-  </tr>
-  <tr>
-    <td>Jancis Robinson</td>
-    <td>18/20</td>
-    <td>2014-2024</td>
-  </tr>
-</table> -->
+					<div class="pro_score">
+					<table width="250" border="0" cellspacing="0" cellpadding="0">
+						<tr>
+							<th class="critic">评论家</th>
+							<th class="score">得分</th>
+							<th class="year">适饮年限</th>
+						</tr>
+						<tr>
+							<td class="critic">Jancis Robinson</td>
+							<td>18/20</td>
+							<td>2014-2024</td>
+						</tr>
+						<tr>
+							<td class="critic">Wine Spectator </td>
+							<td>94/100</td>
+							<td>&nbsp;</td>
+						</tr>
+						<tr>
+							<td class="critic">iWine</td>
+							<td>95/100</td>
+							<td>&nbsp;</td>
+						</tr>
+					</table>
+	</div>
