--- a/app/views/themes/waterfall/wine_details/show.html.erb
+++ b/app/views/themes/waterfall/wine_details/show.html.erb
@@ -30,7 +30,9 @@
 				<%= render "wine_details/share/photos" %>
 		</div>
 		<%#= render "wine_details/share/likers" %>
-		 <%= render "wine_details/share/comments" %>
+		<div class="wp_space_line ptb30">
+		 <%= render "wine_details/share/comments"  %>
+		</div>
 		 <%= render "wine_details/share/followers" %>
 	   <%= render "wine_details/share/owners" %>
     <%#= render "wine_details/share/events" %>
@@ -38,38 +40,10 @@
 				<div id="wp_right">
 					 <%= render "wine_details/share/resource" %>
 					<%= render "wine_details/share/spec"%>
-						<div class="pro_score">
-						<table width="250" border="0" cellspacing="0" cellpadding="0">
-							<tr>
-								<th class="critic">评论家</th>
-								<th class="score">得分</th>
-								<th class="year">适饮年限</th>
-							</tr>
-							<tr>
-								<td class="critic">Jancis Robinson</td>
-								<td>18/20</td>
-								<td>2014-2024</td>
-							</tr>
-							<tr>
-								<td class="critic">Wine Spectator </td>
-								<td>94/100</td>
-								<td>&nbsp;</td>
-							</tr>
-							<tr>
-								<td class="critic">iWine</td>
-								<td>95/100</td>
-								<td>&nbsp;</td>
-							</tr>
-						</table>
-					</div>
-					<div class="wp_price">
-						价格：<span class="price_b">￥2580</span> 起 <a href="#">(更多价格信息+)</a>
-					</div>
-					<div class="wp_price">
-						<p>更多年份</p>
-						<p class="year"><span><a href="wine_profile.html">2010</a></span><span><a href="wine_profile.html">2009</a></span><span><a href="#">2008</a></span><span><a href="#">2005</a></span><span><a href="#">2003</a></span><span><a href="#">2001</a></span><span><a href="#">2000</a></span></p>
-						<p class="mt10"><a href="#"><img src="images/icon/open.gif" width="13" height="13" alt="查看所有年份" /></a></p>
-					</div>
-					<div class=""><a href="#" class="btn_gray"><span>信息纠错与补充</span></a></div>
+					<%= render "wine_details/share/score"%>
+					<%= render "wine_details/share/special_comments"%>
+					<%= render "wine_details/share/price"%>
+					<%= render "wine_details/share/vintage"%>
+				<div class=""><a href="#" class="btn_gray"><span>信息纠错与补充</span></a></div>
 				</div>
 				<div class="clear"></div>   
